--- a/Dnd.Exaltado.Web/Views/Players/_PlayersPartial.cshtml
+++ b/Dnd.Exaltado.Web/Views/Players/_PlayersPartial.cshtml
@@ -11,7 +11,7 @@
 
 <div class="card card-outline card-dark">
     <div class="card-header">
-        <a class="btn bg-gradient-success float-left" id="btn-insert-player">
+        <a class="btn bg-gradient-success float-left" id="btn-insert-player" value="0">
             <i class="fas fa-plus">
             </i>
             Add Player
