Adicionando Explicação sobre SubClasse

--- a/Dnd.Exaltado.Web/Views/Shared/_GenerateForm.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_GenerateForm.cshtml
@@ -59,9 +59,7 @@
             </div>
 
             @{
-              CardId = "_" + @propertyInfo.PropertyType.Name.ToString();
-
-              //CardId = @propertyInfo.PropertyType.Name.ToString();
+              CardId = @propertyInfo.PropertyType.Name.ToString();
             }
             
 
