Fix Button Position

--- a/Dnd.Exaltado.Web/Views/Shared/_GenerateForm.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_GenerateForm.cshtml
@@ -144,7 +144,7 @@
 
         <div id="@GridName" class="custom-grid">
             <label for="@GridTabelId">@GridName.Replace("_", "")</label>
-            <button type="button" id="@GridButtonId" class="btn btn-outline-dark float-right">Add Line</button>
+            <button type="button" id="@GridButtonId" class="btn btn-outline-dark" style="position:absolute;right:20px;">Add Line</button>
 
             <div class="dataTables_wrapper dt-bootstrap4">
 
