--- a/Dnd.Exaltado.Web/Views/Shared/_Script.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_Script.cshtml
@@ -2,5 +2,7 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="~/lib/datatables.net/js/jquery.dataTables.min.js"></script>
 <script src="~/lib/datatables.net/js/dataTables.bootstrap4.min.js"></script>
+<script src="~/lib/Buttons-1.6.1/js/dataTables.buttons.min.js"></script>
+<script src="~/lib/Buttons-1.6.1/js/buttons.bootstrap4.min.js"></script>
 <script src="~/lib/admin-lte/dist/js/adminlte.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
