--- a/Dnd.Exaltado.Web/Views/Shared/_Style.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_Style.cshtml
@@ -2,4 +2,5 @@
 <link rel="stylesheet" href="~/lib/fortawesome/fontawesome-free/css/all.min.css">
 <link rel="stylesheet" href="~/lib/admin-lte/dist/css/adminlte.min.css">
 <link rel="stylesheet" href="~/lib/datatables.net/css/dataTables.bootstrap4.min.css">
+<link rel="stylesheet" href="~/lib/Buttons-1.6.1/css/buttons.bootstrap4.min.css">
 <link rel="stylesheet" href="~/css/site.css" />
