Melhoria para Cadastros e Cadastro de Monstros

--- a/Dnd.Exaltado.Web/Views/Shared/_GenerateFormFields.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_GenerateFormFields.cshtml
@@ -22,14 +22,11 @@
     var Name = @propertyInfo.Name.Replace("_", "");
     var Id = @propertyInfo.Name;
 
-    if (Name == "Id" && Value != null)
+    if (Name == "Id" || Name == "ModalId" || Name == "ModalTitle")
     {
-        DivId = "Div" + Name + "_" + Value;
-
-    } else if (Name == "Id")
-    {
-        DivId = "DivId";
+        DivStyle = "display: none;";
     }
+        
 
 
     if (count == 1)
