--- a/Dnd.Exaltado.Web/Views/Monsters/Index.cshtml
+++ b/Dnd.Exaltado.Web/Views/Monsters/Index.cshtml
@@ -1,1 +1,32 @@
-﻿
+﻿@{
+    ViewBag.Title = " - Monsters";
+}
+
+<div class="card card-outline card-primary">
+    <div class="card-header">
+        <h3 class="card-title">Search Monsters</h3>
+    </div>
+
+    <form role="form">
+        <div class="card-body">
+            <div class="form-group">
+            </div>
+        </div>
+
+
+        <div class="card-footer">
+            <button type="button" id="btn-search-monsters" class="btn btn-primary float-right">Submit</button>
+        </div>
+    </form>
+</div>
+
+<div id="partial-monsters">
+
+</div>
+
+
+
+@section Scripts{
+    <script src="~/js/Monsters.js"></script>
+}
+
