--- a/Dnd.Exaltado.Web/Views/Players/Index.cshtml
+++ b/Dnd.Exaltado.Web/Views/Players/Index.cshtml
@@ -15,12 +15,12 @@
 
 
         <div class="card-footer">
-            <button type="button" id="btn-search-player" class="btn btn-primary float-right">Submit</button>
+            <button type="button" id="btn-search-Players" class="btn btn-primary float-right">Submit</button>
         </div>
     </form>
 </div>
 
-<div id="partial-players">
+<div id="partial-Players">
 
 </div>
 
