Correção para load mto rapido

--- a/Dnd.Exaltado.Web/Views/Shared/_Loading.cshtml
+++ b/Dnd.Exaltado.Web/Views/Shared/_Loading.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="modal fade" tabindex="-1" role="dialog" id="_LoadingModal">
+﻿<div class="modal" tabindex="-1" role="dialog" id="_LoadingModal">
     <div class="modal-dialog modal-sm modal-dialog-centered" style="width:150px;" role="document">
         <div class="modal-content">
             <div class="modal-body">
